samples/_failures_safe/1761367904_601dcf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb1868dd.c: In function ‘main’:
./samples/SAFE/__tmp_fb1868dd.c:172:5: error: expected declaration or statement at end of input
  172 |     print_tokens(tokens, token_count);
      |     ^~~~~~~~~~~~
